--- a/css/custom.css
+++ b/css/custom.css
@@ -16,6 +16,7 @@ hr {
 	background-image: url("../img/logo-1500x1500.png");
 	background-repeat: no-repeat;
 	background-position: top center;
+	background-size: 280px 280px;
 	margin: 40px;
 	height: 300px;
 }
