--- a/css/custom.css
+++ b/css/custom.css
@@ -16,13 +16,33 @@ hr {
 	background-image: url("../img/logo-1500x1500.png");
 	background-repeat: no-repeat;
 	background-position: top center;
-	background-size: 280px 280px;
+	background-size: 150px 150px;
 	margin: 40px;
-	height: 300px;
+	height: 200px;
 }
+
+#alt-header {
+	background-image: url("../img/me.png");
+	background-repeat: no-repeat;
+	background-position: top center;
+	background-size: 150px 150px;
+	margin: 40px;
+	height: 200px;
+}
+
 
 #footer {
 	height: 300px;	
+}
+
+.icon {
+	margin-bottom: 2em;
+	font-size: 80%;
+	text-align: center;
+}
+
+.text-center {
+	text-align: center;
 }
 
 blockquote {
