Thinner logo. Added affiliations.

--- a/css/custom.css
+++ b/css/custom.css
@@ -27,7 +27,7 @@ hr {
 }
 
 #header {
-	background-image: url("../img/logo-1500x1500.png");
+	background-image: url("../img/logo-1500x1500-thin.png");
 	background-repeat: no-repeat;
 	background-position: top center;
 	background-size: 150px 150px;
