--- a/css/custom.css
+++ b/css/custom.css
@@ -46,7 +46,12 @@ hr {
 
 
 #footer {
-	height: 300px;	
+	background-image: url("../img/logo-1500x1500-thin.png");
+	background-repeat: no-repeat;
+	background-position: bottom center;
+	background-size: 150px 150px;
+	margin: 40px;
+	height: 400px;
 }
 
 .icon {
