--- a/css/custom.css
+++ b/css/custom.css
@@ -27,10 +27,11 @@ hr {
 }
 
 #header {
-	background-image: url("../img/logo-1500x1500-thin.png");
+	background-image: url("../img/logo-1500x1500-thin-white.png");
 	background-repeat: no-repeat;
 	background-position: top center;
 	background-size: 150px 150px;
+	background-color: #000;
 	margin: 40px;
 	height: 200px;
 }
