--- a/css/custom.css
+++ b/css/custom.css
@@ -1,18 +1,24 @@
 
 body {
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Cinzel', serif;
+	font-family: 'Crimson Text', serif;
 }
 h1,h2,h3,h4,h5 {
 	text-decoration: none;
     font-style: normal;
     font-weight: 100;
     text-transform: uppercase;
+    color: #000;
 }
-h2 { font-size: 1.4rem; line-height: 1.5;  letter-spacing: 0rem; }
-h5 { font-size: 1.4rem; line-height: 1.5;  letter-spacing: 0rem; }
-@media (min-width: 550px) {
-	  h5 { font-size: 1.5rem; }
-	  h2 { font-size: 1.5rem; }
+h1 { font-size: 2.5rem; line-height: 1.5;  letter-spacing: 0rem; margin-top: 1.75em; }
+h2 { font-size: 1.5rem; line-height: 1.5;  letter-spacing: 0rem; margin-top: 1em; }
+h5 { font-size: 1.2rem; line-height: 1.5;  letter-spacing: 0rem; margin-top: 1em; }
+
+@media (min-width: 800px) {
+	h1 { font-size: 5rem; line-height: 1.5;  letter-spacing: 0rem; margin-top: 1.5em; margin-bottom: 1.5em; }
+	h2 { font-size: 2rem; line-height: 1.5;  letter-spacing: 0rem; margin-top: 1.5em; margin-bottom: 1.5em; }
+	h5 { font-size: 1.4rem; line-height: 1.5;  letter-spacing: 0rem; margin-top: 1.5em; margin-bottom: 1.5em; }
+
 }
 
 img {
@@ -22,13 +28,16 @@ hr {
 	border-top: 1px solid #000;
 }
 
-div h2 { 
+/*div h2 { 
 	color: white; 
 	background: #000;
 	padding: 1rem;
-	/*padding-right: 1rem;*/
 }
+*/
 
+.no-underline {
+	text-decoration: none;	
+}
 
 .table { 
 	display: table; 
@@ -45,15 +54,6 @@ div h2 {
 }
 
 #header {
-	background-image: url("../img/logo-1500x1500-thin.png");
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: 40px 40px;
-	padding: 50px;
-	height: 120px;
-	color: #000;
-	margin-bottom: 2em;
-    text-transform: uppercase;
 }
 
 #alt-header {
